[project]
name = "hriblossom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langgraph>=0.6.6",
    "pydantic>=2.11.7",
    "pypot>=5.0.2",
]
